@@ -1,6 +1,6 @@
 # last modified 11 December 2006 by J. Fox
-# last modified 17 April 2009 by M. Friendly
-export(heplot, heplot3d, heplot1d, ellipse3d.axes)
+# last modified 16 December 2009 by M. Friendly
+export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0)
 S3method(heplot, mlm)
 S3method(heplot3d, mlm)
 S3method(pairs, mlm)
