@@ -65,4 +65,7 @@ Version 0.8-10 (2009-10-10)
 Version 0.8-11 (2009-12-08)
  o Minor fixes to heplot1d
  o Added contrasts example to RootStock.Rd
+ o Added WeightLoss data -- doubly multivariate
+ o Added mark.H0
+
 
